solved overflow problem

--- a/blocks/cover/__image/cover__image.css
+++ b/blocks/cover/__image/cover__image.css
@@ -7,6 +7,7 @@
     -o-transition: opacity 0.5s linear 0.2s;
     transition: opacity 0.5s linear 0.2s;
     cursor: url("./images/hand.png"), auto;
+    width: 100%;
 }
 
 .cover:hover .cover__image {
