--- a/blocks/header/__cover/header__cover.css
+++ b/blocks/header/__cover/header__cover.css
@@ -4,6 +4,6 @@
 
 @media screen and (max-width: 320px) {
     .header__cover {
-        width: 320px;
+        max-width: 320px;
     }
 }
