--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -20,5 +20,4 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    overflow: hidden;
 }
